--- a/views/suamenu.hbs
+++ b/views/suamenu.hbs
@@ -28,7 +28,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+
 
 
 
@@ -208,7 +209,7 @@
                                 <div class="col-lg-15 col-md-15 col-sm-15 col-15 mx-auto form-wrapper">
                                     <div class="form-container">
 
-                                        <form action="/auth/themmenu" method="POST" style="margin-top: 20px;">
+                                        <form action="/auth/suamenu" method="POST" style="margin-top: 20px;">
                                             <div class="form-group input-rounded">
                                                 {{!-- <select class="form-control" id="chucvu" name="mamn"
                                                     style="margin-bottom: 5px; padding: 10px;">
@@ -233,7 +234,7 @@
 
                                             <div style="display: flex; justify-content: space-between;">
                                                 <button type="submit" class="btn btn-primary"
-                                                    style="flex: 1; margin-right: 10px;"> Thêm </button>
+                                                    style="flex: 1; margin-right: 10px;"> Sửa</button>
                                                 <a href="/hienmenu" class="btn btn-primary" style="flex: 1;">Menu</a>
                                             </div>
 
