--- a/views/trangchu.hbs
+++ b/views/trangchu.hbs
@@ -172,21 +172,19 @@
                             <a href="#" class="dropdown-item text-center">See all message</a>
                         </div>
                     </div>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <i class="fa fa-bell me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Notificatin</span>
-                        </a>
-                    
-                    </div>
+                   
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <img class="rounded-circle me-lg-2" src="img/user.jpg" alt=""
                                 style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">John Doe</span>
+                            <span class="d-none d-lg-inline-flex"> {{#each tenNv}}
+                               <p>Xin chào {{this}}</p>
+                             {{/each}}</span>
+                                
+                         
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="#" class="dropdown-item">My Profile</a>
+                            <a href="/myprofile" class="dropdown-item">My Profile</a>
                             <a href="#" class="dropdown-item">Settings</a>
                             <a href="/login" class="dropdown-item">Log Out</a>
                         </div>
@@ -323,6 +321,7 @@
                 <canvas id="barChart"></canvas>
                 <canvas id="barChartHome"></canvas>
             </div>
+            
 
 
 
